--- a/package.json
+++ b/package.json
@@ -4,26 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Jayeshuttam/Jobs-API.git"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Jayeshuttam/Jobs-API/issues"
-  },
-  "homepage": "https://github.com/Jayeshuttam/Jobs-API#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^6.4.0",
+    "helmet": "^5.0.2",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "swagger-ui-express": "^4.3.0",
+    "xss-clean": "^0.1.1",
+    "yamljs": "^0.3.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
